# AdvancedProg

./: README.md
client/: CMakeLists.txt  makefile  makefile~
client/src/: AIPlayer.cpp  AIPlayer.h  AIPlayer.h~  Board.cpp  Board.h  BoardCell.cpp  BoardCell.h  ConsoleBoard.cpp  ConsoleBoard.h  ConsoleBoard.h~  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h~  HumanPlayer.cpp  HumanPlayer.h~  Player.cpp  Player.h~  ReadFile.cpp  ReadFile.h~  RemoteGame.cpp  RemoteGame.h  RemoteGame.h~  RemotePlayer.cpp  RemotePlayer.h  SquareColorEnum.h~  StandardLogic.cpp  StandardLogic.h~  main.cpp
client/tests/: AIPlayer_Test.cpp  Board-ConsoleBoard_Test.cpp  BoardCell_Test.cpp  GameLogic-StandadLogic_Test.cpp  Player-HumanPlayer_Test.cpp  gtest_main.cpp
